--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,8 @@ navigation = "2.8.4"
 firebaseAuthKtx = "23.1.0"
 firebaseFirestoreKtx = "25.1.1"
 zxing = "4.3.0"
+opencv = "4.5.3.0"
+
 
 
 [libraries]
@@ -38,6 +40,7 @@ firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-fires
 androidx-material-icons = "androidx.compose.material:material-icons-core:1.5.0"
 androidx-material-icons-extended = "androidx.compose.material:material-icons-extended:1.5.0"
 zxing-embedded = { module = "com.journeyapps:zxing-android-embedded", version.ref = "zxing" }
+opencv = { group = "com.quickbirdstudios", name = "opencv", version.ref = "opencv" }
 
 
 
